@@ -101,6 +101,19 @@ The following people have contributed to the development.
 <!-- Entry -->
 <TR BGColor="#EEEEEE">
   <TD VALIGN="TOP">
+    <A HREF="mailto:arthur.barrett@march-hare.com">Barrett, Arthur</A>
+  </TD>
+  <TD WIDTH="300">
+    Working on Windows makefiles.
+  </TD>
+  <TD VALIGN="TOP">
+    <BR>
+  </TD>
+</TR>
+
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
+  <TD VALIGN="TOP">
     <A HREF="mailto:bbrown@solana.com">Brown, William Lewis</A>
   </TD>
   <TD WIDTH="300">
@@ -273,6 +286,19 @@ The following people have contributed to the development.
   </TD>
   <TD VALIGN="TOP">
     <A HREF="http://www.wavo.com">Wavo Corporation</A>
+  </TD>
+</TR>
+
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
+  <TD VALIGN="TOP">
+    <A HREF="mailto:jjs@acis.com.au">Smith, Justin</A>
+  </TD>
+  <TD WIDTH="300">
+    Working on Windows Makefiles.
+  </TD>
+  <TD VALIGN="TOP">
+    <BR>
   </TD>
 </TR>
 
